design sec alignment fixed

--- a/style.css
+++ b/style.css
@@ -606,7 +606,7 @@ html {
 .design-inner {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+
   gap: 54px;
 }
 
@@ -617,6 +617,7 @@ html {
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 81px;
 }
 
@@ -1094,7 +1095,6 @@ footer .about .msg a:hover {
   }
 
 }
-
 @media screen and (max-width: 768px) {
   .quickxs {
     gap: 5px;
